# nuclex-ogg

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  nuclex-ogg (msvc-14.2).vcxproj  nuclex-ogg (msvc-14.2).vcxproj.filters
